# gatum-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
knowledge/faq/: delivery_reports.md  how_to_create_campaign.md  smpp_connection.md
scripts/: demo.sh
src/gatum_agent/: __init__.py  api.py  config.py  main.py
src/gatum_agent/agent/: __init__.py  classifier.py  handlers.py  orchestrator.py  session.py
src/gatum_agent/analytics/: __init__.py  report.py
src/gatum_agent/channels/: __init__.py  telegram_bot.py
src/gatum_agent/knowledge/: __init__.py  faq_loader.py
src/gatum_agent/llm/: __init__.py  client.py
src/gatum_agent/models/: __init__.py  ticket.py
src/gatum_agent/storage/: __init__.py  sqlite.py
