[project]
name = "gatum-ai-agent"
version = "0.1.0"
description = "Multichannel AI support agent prototype for Gatum"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-telegram-bot>=21.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.55.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
